windowitem: properly handle sub-subsurfaces

The damage of the whole subsurface tree needs to be considered, not just the
topmost subsurfaces of a window.

BUG: 466747